--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,8 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <style type="text/css" id="ionic-compatibility-mode-styles"></style>
+
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -25,6 +27,10 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script>
+
+    <!-- Allows Ionic v4 components to be used in an AngularJS/Ionic 1 app -->
+    <script src="js/ionicCompatibilityMode.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -33,6 +39,9 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+
+    <script src="https://unpkg.com/@ionic/core@latest/dist/ionic.js"></script>
+
   </head>
   <body ng-app="starter">
     <!--
@@ -48,5 +57,9 @@
       have templates inline in this html file if you'd like).
     -->
     <ion-nav-view></ion-nav-view>
+
+    <ion-toast-controller></ion-toast-controller>
+    <ion-modal-controller></ion-modal-controller>
+
   </body>
 </html>
